--- a/index.html
+++ b/index.html
@@ -3,6 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-XPPH7GMTWG"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-XPPH7GMTWG');
+    </script>
     <title>Home</title>
     <style>
         *{
@@ -385,7 +394,7 @@
                             <strong><p>${sgpa}</p></strong>
                             `
                         if(year.value==1&&sem.value==1){
-                            document.getElementById("cgpa").classList.add("hidden");
+                            document.getElementById("cgpa-input").classList.add("hidden");
                             document.getElementById("cgpa-calculate").classList.add("hidden");
                             document.getElementById("panel3-cgpa").innerHTML=`
                                 <span>CGPA:</span>
